--- a/index.html
+++ b/index.html
@@ -5,19 +5,27 @@
     	<meta charset="utf-8">
     	<title>Event Hub</title>
 	</head>
-
 <!--
 1. You should have a header element.
 -->
+   	<header>
 <!-- 
 2. Inside the header element, you should have an h1 element that contains the text Event Hub, and a nav element.
--->
+-->   	
+    	<h1>Event Hub</h1>
+        <nav>
 <!-- 
 3. Inside the nav element, you should have an unordered list of two items containing links to different sections of the page. The first item should have the text Upcoming Events, and the second item should have the text Past Events.
--->
+-->       
+            <ul>
 <!-- 
 4. Each link should be represented by an a element with an href attribute that links to the corresponding section of the page, #upcoming-events and #past-events respectively.
--->
+-->                       
+                <li><a href="#upcoming-events">Upcoming Events</a></li>
+                <li><a href="#past-events">Past Events</a></li>
+            </ul>
+        </nav>
+    </header>
 
 	<body>
 
